Fixed overflow to hidden

--- a/webapp/packages/react-app/src/components/project-cell/project-cell.css
+++ b/webapp/packages/react-app/src/components/project-cell/project-cell.css
@@ -8,4 +8,5 @@
   height: 60px;
   padding: 0 10px;
   display: flex;
+  overflow: hidden;
 }
